<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>homo_multirobot_localization</name>
  <version>0.0.1</version>
  <description>Multirobot localization launch/config (rf2o, EKF, etc.).</description>

  <maintainer email="todo@example.com">todo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rf2o_laser_odometry</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

